Atualização do codigo
realizamos as seguintes modificações
Validation
Exception Handler
Testes MockMvc
DTO
Security
MapStruct
Arquitetura em camadas