@@ -2,167 +2,99 @@ package com.example.ReservaBiblioteca.service;
 
 import com.example.ReservaBiblioteca.dto.LivroDTO;
 import com.example.ReservaBiblioteca.entity.Livro;
-import com.example.ReservaBiblioteca.entity.Status;
+import com.example.ReservaBiblioteca.mapper.LivroMapper;
 import com.example.ReservaBiblioteca.repository.LivroRepository;
 
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class LivroService {
 
     private final LivroRepository livroRepository;
+    private final LivroMapper livroMapper;
 
-    public LivroService(LivroRepository livroRepository) {
+    public LivroService(
+            LivroRepository livroRepository,
+            LivroMapper livroMapper) {
+
         this.livroRepository = livroRepository;
+        this.livroMapper = livroMapper;
     }
 
-    /* =========================
-       LISTAR TODOS
-    ========================= */
+    // =========================
+    // LISTAR
+    // =========================
 
     public List<LivroDTO> listarTodos() {
 
-        return livroRepository
-                .findAll()
+        return livroRepository.findAll()
                 .stream()
-                .map(this::toDTO)
-                .collect(Collectors.toList());
+                .map(livroMapper::toDTO)
+                .toList();
     }
 
-    /* =========================
-       BUSCAR
-    ========================= */
-
-    public List<LivroDTO> buscar(String titulo, String autor, String isbn) {
-
-        if (isbn != null && !isbn.isBlank()) {
-
-            Livro livro = livroRepository.findByIsbn(isbn);
-
-            return livro != null
-                    ? List.of(toDTO(livro))
-                    : List.of();
-        }
-
-        if (titulo != null && !titulo.isBlank()) {
-
-            return livroRepository
-                    .findByTituloContainingIgnoreCase(titulo)
-                    .stream()
-                    .map(this::toDTO)
-                    .collect(Collectors.toList());
-        }
-
-        if (autor != null && !autor.isBlank()) {
-
-            return livroRepository
-                    .findByAutorContainingIgnoreCase(autor)
-                    .stream()
-                    .map(this::toDTO)
-                    .collect(Collectors.toList());
-        }
-
-        return List.of();
-    }
-
-    /* =========================
-       CADASTRAR
-    ========================= */
+    // =========================
+    // CADASTRAR
+    // =========================
 
     public LivroDTO cadastrar(LivroDTO dto) {
 
-        Livro livro = toEntity(dto);
+        Livro livro = livroMapper.toEntity(dto);
 
-        Livro livroSalvo = livroRepository.save(livro);
+        Livro salvo = livroRepository.save(livro);
 
-        return toDTO(livroSalvo);
+        return livroMapper.toDTO(salvo);
     }
 
-    /* =========================
-       EDITAR
-    ========================= */
+    // =========================
+    // BUSCAR
+    // =========================
+
+    public List<LivroDTO> buscar(
+            String titulo,
+            String autor,
+            String isbn) {
+
+        return livroRepository.findAll()
+                .stream()
+                .filter(livro ->
+                        livro.getTitulo().contains(titulo) ||
+                        livro.getAutor().contains(autor) ||
+                        livro.getIsbn().contains(isbn))
+                .map(livroMapper::toDTO)
+                .toList();
+    }
+
+    // =========================
+    // EDITAR
+    // =========================
 
     public LivroDTO editar(Long id, LivroDTO dto) {
 
-        Livro livro = livroRepository
-                .findById(id)
+        Livro livro = livroRepository.findById(id)
                 .orElseThrow(() ->
                         new RuntimeException("Livro não encontrado"));
 
         livro.setTitulo(dto.getTitulo());
         livro.setAutor(dto.getAutor());
         livro.setIsbn(dto.getIsbn());
+        livro.setCategoria(dto.getCategoria());
         livro.setEditora(dto.getEditora());
         livro.setAno(dto.getAno());
-        livro.setCategoria(dto.getCategoria());
 
-        // Atualiza status apenas se vier preenchido
-        if (dto.getStatus() != null && !dto.getStatus().isBlank()) {
+        Livro atualizado = livroRepository.save(livro);
 
-            livro.setStatus(
-                    Status.valueOf(dto.getStatus())
-            );
-        }
-
-        Livro livroAtualizado = livroRepository.save(livro);
-
-        return toDTO(livroAtualizado);
+        return livroMapper.toDTO(atualizado);
     }
 
-    /* =========================
-       EXCLUIR
-    ========================= */
+    // =========================
+    // EXCLUIR
+    // =========================
 
     public void excluir(Long id) {
 
         livroRepository.deleteById(id);
-    }
-
-    /* =========================
-       ENTITY -> DTO
-    ========================= */
-
-    private LivroDTO toDTO(Livro livro) {
-
-        LivroDTO dto = new LivroDTO();
-
-        dto.setId(livro.getId());
-        dto.setTitulo(livro.getTitulo());
-        dto.setAutor(livro.getAutor());
-        dto.setIsbn(livro.getIsbn());
-        dto.setEditora(livro.getEditora());
-        dto.setAno(livro.getAno());
-        dto.setCategoria(livro.getCategoria());
-
-        if (livro.getStatus() != null) {
-
-            dto.setStatus(livro.getStatus().name());
-        }
-
-        return dto;
-    }
-
-    /* =========================
-       DTO -> ENTITY
-    ========================= */
-
-    private Livro toEntity(LivroDTO dto) {
-
-        Livro livro = new Livro();
-
-        livro.setTitulo(dto.getTitulo());
-        livro.setAutor(dto.getAutor());
-        livro.setIsbn(dto.getIsbn());
-        livro.setEditora(dto.getEditora());
-        livro.setAno(dto.getAno());
-        livro.setCategoria(dto.getCategoria());
-
-        // Status padrão
-        livro.setStatus(Status.DISPONIVEL);
-
-        return livro;
     }
 }
